# fractal

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: colour.rs  config.rs  main.rs  mandelbrot.rs
