[package]
name = "fractal"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
description = "A fairly simple fractal renderer"
license = "MIT"

[dependencies]
anyhow = "1.0.32"
chrono = "0.4.15"
ndarray = { version = "0.13.1", features = ["rayon"] }
notify = "4.0.15"
num-complex = { version = "0.3.0", features = ["std"], default-features = false }
num-traits = { version = "0.2.12", features = ["std"], default-features = false }
palette = { version = "0.5.0", features = ["std"], default-features = false }
paw = "1.0.0"
rayon = "1.4.0"
sdl2 = { version = "0.34.3", features = ["bundled", "static-link"] }
serde = { version = "1.0.116", features = ["derive"] }
structopt = { version = "0.3.17", features = ["paw"] }
toml = "0.5.6"
png = "0.16.7"
